name:          hyperloglog
category:      Numeric
version:       0.4.6
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/analytics/hyperloglog
bug-reports:   http://github.com/analytics/hyperloglog/issues
copyright:     Copyright (C) 2013-2015 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.2
synopsis:      An approximate streaming (constant space) unique object counter
description:
  This package provides an approximate streaming (constant space) unique object counter.
  .
  See the original paper for details:
  <http://algo.inria.fr/flajolet/Publications/FlFuGaMe07.pdf>
  .
  Notably it can be used to approximate a set of several billion elements with 1-2% inaccuracy
  in around 1.5k of memory.

extra-source-files:
  .ghci
  .gitignore
  .vim.custom
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/analytics/hyperloglog.git

flag herbie
  default: False
  manual: True

library
  build-depends:
    approximate               >= 0.2.1    && < 1,
    base                      >= 4.9      && < 5,
    binary                    >= 0.5      && < 0.9,
    bits                      >= 0.2      && < 1,
    bytes                     >= 0.7      && < 1,
    cereal                    >= 0.3.5    && < 0.6,
    cereal-vector             >= 0.2      && < 0.3,
    comonad                   >= 4        && < 6,
    deepseq                   >= 1.3      && < 1.5,
    distributive              >= 0.3      && < 1,
    hashable                  >= 1.1.2.3  && < 1.5,
    lens                      >= 4        && < 6,
    reflection                >= 1.3      && < 3,
    semigroupoids             >= 4        && < 6,
    semigroups                >= 0.8.4    && < 1,
    tagged                    >= 0.4.5    && < 1,
    vector                    >= 0.9      && < 0.13

  if flag(herbie)
    build-depends: HerbiePlugin >= 0.1 && < 0.2
    cpp-options: -DHERBIE
    ghc-options: -fplugin=Herbie

  exposed-modules:
    Data.HyperLogLog
    Data.HyperLogLog.Config
    Data.HyperLogLog.Type

  other-modules:
    Crypto.MAC.SipHash
  -- Only needed for Crypto.MAC.SipHash
  build-depends:
    bytestring  >= 0.9 && < 0.12,
    cpu         >= 0.1 && < 0.2

  ghc-options: -Wall -Wtabs -O2
  hs-source-dirs: src
  default-language: Haskell2010
